Add the function to complete and delete tasks

--- a/styles/modals.css
+++ b/styles/modals.css
@@ -1,4 +1,5 @@
-#add_project_modal{
+#add_project_modal,
+#add_todo_modal{
     width: 500px;
     height: 200px;
     background-color: black;
@@ -14,33 +15,136 @@
     gap: 20px;
     border-radius: 10px;
     animation: zoomIn;
-    animation-duration: 1s;
+    animation-duration: .5s;
 }
 
 
-#add_project_modal label{
+#add_project_modal label,
+#add_todo_modal label{
     width: 200px;
     display: inline-block;
 }
 
-#add_project_modal input{
+#add_project_modal input,
+#add_todo_modal input{
     width: 200px;
     border-radius: 5px;
     height: 30px;
 }
 
-#add_project_modal input[type="text"]{
+#add_project_modal input[type="text"],
+#add_todo_modal input[type="text"]{
     padding-left: 5px;
     border: none;
 }
 
-#add_project_modal button{
+#todos h2,
+#completed h2{
+    margin-bottom: 40px;
+}
+
+#add_new_todo_button{
+    padding: 5px;
+    background-color: white;
+    width: 80%;
+    border-radius: 10px;
+    align-self: center;
+    margin-top: 10px;
+}
+
+#add_new_todo_button:hover{
+    cursor: pointer;
+    background-color: darkgrey;
+}
+
+.card{
+    background-color: #A66E38;
+    height: 500px;
+    width: 300px;
+    border: 1px solid white;
+    border-radius: 10px;
+    padding: 10px;
+    gap: 10px;
+    display: flex;
+    flex-direction: column;
+    animation: zoomIn;
+    animation-duration: .5s;
+}
+
+.todo_task{
+    display: flex;
+    justify-content: space-evenly;
+
+}
+
+.todo_task p{
+    width: 200px;
+}
+
+.todo_task button{
+    padding: 5px;
+    border: none;
+    border-radius: 5px;
+}
+
+.todo_task button:hover{
+    cursor: pointer;
+}
+
+.close_button{
+    width: 15px;
+    border-radius: 50%;
+    border: none;
+}
+
+.close_button:hover{
+    cursor: pointer;
+}
+
+.heading_div{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex: 2;
+}
+
+.heading_div h3{
+    flex: 3;
+}
+
+.heading_div button{
+    align-self: flex-start;
+}
+
+.task_div{
+    flex: 1;
+}
+
+.create_project_button,
+.accept_button{
     border: none;
     width: 200px;
     height: 30px;
     border-radius: 10px;
 }
 
-#add_project_modal button:hover{
+.create_project_button:hover,
+.accept_button:hover{
     cursor: pointer;
+}
+
+.complete_button{
+    background-color: #2FFF07;
+}
+
+.delete_button{
+    background-color: #FF3723;
+}
+
+.complete_button:hover{
+    background-color: #20C900;
+}
+
+.delete_button:hover{
+    background-color: #E91600;
 }
