--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,12 @@
+@font-face {
+    font-family: 'Action Man';
+    src: url('../fonts/ActionMan.woff2') format('woff2'),
+        url('../fonts/ActionMan.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -8,13 +17,13 @@ html,body{
     width: 100%;
     display: flex;
     text-align: center;
+    font-family:'Action Man','Courier New', Courier, monospace;
 }
 
 #nav{
     flex: 1;
     background-color: #493628;
     color: white;
-    font-family: 'Courier New', Courier, monospace;
     padding: 10px;
 }
 
@@ -23,7 +32,6 @@ html,body{
 }
 
 #projects{
-    font-family:'Times New Roman', Times, serif;
     display: flex;
     flex-direction: column;
     align-items: center;
