--- a/styles/modals.css
+++ b/styles/modals.css
@@ -4,7 +4,6 @@
     height: 200px;
     background-color: black;
     color: white;
-    font-family: 'Courier New', Courier, monospace;
     padding: 10px;
     position: absolute;
     top: 10%;
@@ -43,16 +42,20 @@
     margin-bottom: 40px;
 }
 
-#add_new_todo_button{
+#add_new_todo_button,
+#delete_project_button{
+    font-family: inherit;
     padding: 5px;
     background-color: white;
     width: 80%;
     border-radius: 10px;
     align-self: center;
     margin-top: 10px;
+    border: none;
 }
 
-#add_new_todo_button:hover{
+#add_new_todo_button:hover,
+#delete_project_button:hover{
     cursor: pointer;
     background-color: darkgrey;
 }
@@ -63,22 +66,24 @@
     width: 300px;
     border: 1px solid white;
     border-radius: 10px;
-    padding: 10px;
     gap: 10px;
     display: flex;
     flex-direction: column;
     animation: zoomIn;
     animation-duration: .5s;
+    overflow: scroll;
+    padding: 30px;
 }
 
 .todo_task{
     display: flex;
     justify-content: space-evenly;
-
 }
 
 .todo_task p{
     width: 200px;
+    align-self: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .todo_task button{
@@ -126,6 +131,7 @@
     width: 200px;
     height: 30px;
     border-radius: 10px;
+    font-family: inherit;
 }
 
 .create_project_button:hover,
@@ -134,10 +140,14 @@
 }
 
 .complete_button{
+    height: 30px;
+    width: 40px;
     background-color: #2FFF07;
 }
 
 .delete_button{
+    height: 30px;
+    width: 50px;
     background-color: #FF3723;
 }
 
@@ -147,4 +157,18 @@
 
 .delete_button:hover{
     background-color: #E91600;
+}
+
+
+@media only screen and (max-width: 800px) {
+    .card{
+        width: 200px;
+        height: 300px;
+    }
+
+    #add_project_modal,
+    #add_todo_modal{
+        width: 300px;
+        top: 20%;
+    }
 }
